// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders correctly with props 1`] = `
<header>
  <h1
    className="isFullscreen"
    css={
      {
        "name": "1vze745",
        "next": undefined,
        "styles": "
	background-color: var(--foreground);
	color: var(--background);
	font-size: 27px;
	font-weight: 700;
	height: 100px;
	left: 0;
	line-height: 100px;
	opacity: 1;
	position: fixed;
	text-align: center;
	transition: opacity .333s;
	top: 0;
	width: 250px;
	z-index: 10;

	&.isFullscreen {
		opacity: 0.65;
	}

	@media (min-width: 576px) {
		font-size: 37px;
		width: 400px;
	};
",
      }
    }
  >
    <a
      href="/"
      tabIndex="1"
    >
      EYESBOUND
    </a>
  </h1>
  <nav
    className="isFullscreen"
    css={
      {
        "name": "1ghowhq",
        "next": undefined,
        "styles": "
	line-height: 40px;
	opacity: 1;
	outline: 0;
	position: fixed;
	text-align: center;
	top: 100px;
	transform: translateY(calc(-100% + 40px));
	transition: transform .333s, opacity .333s;
	user-select: none;
	width: 180px;
	z-index: 9;

	@media (min-width: 768px) {
		transform: translateY(calc(-100% + 20px));
	};

	&.isFullscreen {
		opacity: 0;
	}

	div {
		transition: background-color .333s, color .333s;
		background-color: var(--background);
		color: var(--foreground);

		@media (min-width: 768px) {
			line-height: 20px;
		};

		&:hover {
			background: var(--foreground);
			color: var(--background);
		}
	}

	&.open {
		transform: translateY(0);

		div {
			cursor: default;

			&:hover {
				background-color: var(--background);
				color: var(--foreground);
			}
		}
	}

	ul {
		background-color: var(--foreground);
		color: var(--background);
	}

	li {
		transition: opacity .333s;

		&:hover {
			opacity: 0.666;
		}
	}

	div, li {
		cursor: pointer;
		font-weight: 700;
		text-transform: uppercase;
	}
",
      }
    }
  >
    <ul>
      <li>
        <a
          href="/picture"
          tabIndex="2"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
          tabIndex="3"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
          tabIndex="4"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
          tabIndex="5"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
          tabIndex="6"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
          tabIndex="7"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
          tabIndex="8"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
          tabIndex="9"
        >
          Contact
        </a>
      </li>
    </ul>
    <div
      onClick={[Function]}
    >
      Menu
    </div>
  </nav>
</header>
`;

exports[`Header renders correctly without props 1`] = `
<header>
  <h1
    className=""
    css={
      {
        "name": "1vze745",
        "next": undefined,
        "styles": "
	background-color: var(--foreground);
	color: var(--background);
	font-size: 27px;
	font-weight: 700;
	height: 100px;
	left: 0;
	line-height: 100px;
	opacity: 1;
	position: fixed;
	text-align: center;
	transition: opacity .333s;
	top: 0;
	width: 250px;
	z-index: 10;

	&.isFullscreen {
		opacity: 0.65;
	}

	@media (min-width: 576px) {
		font-size: 37px;
		width: 400px;
	};
",
      }
    }
  >
    <a
      href="/"
      tabIndex="1"
    >
      EYESBOUND
    </a>
  </h1>
  <nav
    className=""
    css={
      {
        "name": "1ghowhq",
        "next": undefined,
        "styles": "
	line-height: 40px;
	opacity: 1;
	outline: 0;
	position: fixed;
	text-align: center;
	top: 100px;
	transform: translateY(calc(-100% + 40px));
	transition: transform .333s, opacity .333s;
	user-select: none;
	width: 180px;
	z-index: 9;

	@media (min-width: 768px) {
		transform: translateY(calc(-100% + 20px));
	};

	&.isFullscreen {
		opacity: 0;
	}

	div {
		transition: background-color .333s, color .333s;
		background-color: var(--background);
		color: var(--foreground);

		@media (min-width: 768px) {
			line-height: 20px;
		};

		&:hover {
			background: var(--foreground);
			color: var(--background);
		}
	}

	&.open {
		transform: translateY(0);

		div {
			cursor: default;

			&:hover {
				background-color: var(--background);
				color: var(--foreground);
			}
		}
	}

	ul {
		background-color: var(--foreground);
		color: var(--background);
	}

	li {
		transition: opacity .333s;

		&:hover {
			opacity: 0.666;
		}
	}

	div, li {
		cursor: pointer;
		font-weight: 700;
		text-transform: uppercase;
	}
",
      }
    }
  >
    <ul>
      <li>
        <a
          href="/picture"
          tabIndex="2"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
          tabIndex="3"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
          tabIndex="4"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
          tabIndex="5"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
          tabIndex="6"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
          tabIndex="7"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
          tabIndex="8"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
          tabIndex="9"
        >
          Contact
        </a>
      </li>
    </ul>
    <div
      onClick={[Function]}
    >
      Menu
    </div>
  </nav>
</header>
`;
